idk i needed to update the NuGet packgage

--- a/Command_Pattern_Code/DylanRoberts_Command/DylanRoberts_Command.csproj
+++ b/Command_Pattern_Code/DylanRoberts_Command/DylanRoberts_Command.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\ICommand.cs" />
+    <Compile Include="Interfaces\IReceiver.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
